--- a/css/main.css
+++ b/css/main.css
@@ -455,6 +455,149 @@ nav ul li a:hover {
     }
 }
 
+/*
+******************** portfolio
+*/
+
+#portfolio {
+	padding: 40px;
+    background: #c9c9c9;
+}
+
+.work {
+	position: relative;
+    background: linear-gradient(rgba(0,0,0,.7),rgba(0,0,0,.7));
+    max-height: 300px;
+    border-radius: 10px;
+    margin: 10px 0;
+    overflow: hidden;
+/*    image overlay*/
+}
+
+#portfolio img {
+	display: block;
+    width: 100%;
+    min-height: 300px;
+    cursor: pointer;
+    opacity: 1;
+    transition: opacity 2s ease;
+}
+
+#portfolio img:hover{
+	opacity: .4;
+}
+
+.image-overlay {
+	position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    margin-bottom: -100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px;
+    background: rgb(147,147,147);
+    transition: margin 2s ease;
+}
+
+.work:hover .image-overlay  {
+	margin-bottom: 0;
+}
+
+.image-text h3 {
+	text-transform: uppercase;
+    font-size: 20px;
+    margin-bottom: 5px;
+    color: #f5f5f5;
+}
+
+.image-icon {
+	font-size: 30px;
+    color: #2b98f0;
+    padding: 10px;
+    background: #f5f5f5;
+    border-radius: 50%;
+    transition: transform 2s ease, background 2s ease;
+}
+
+.image-icon:hover {
+	transform: translateY(-10px);
+    background: #082238;
+}
+
+.section-btn {
+    text-align: center;
+    margin: 20px 0 10px 0;
+}
+
+.section-btn a {
+	display: inline-block;
+    padding: .5em;
+    text-decoration: none;
+    font-size: 30px;
+    color: #f5f5f5;
+    background: #2b98f0;
+    transition: background 2s ease, color 2s ease;
+}
+
+.section-btn a:hover {
+	color: #2b98f0;
+    background: #f5f5f5;
+}
+
+.section-btn .icon {
+    display: inline-block;
+	font-size: 40px;
+    margin-right: 10px;
+}
+
+/*
+******************* portfolio responsive
+*/
+
+/*
+@media screen and (min-width: 576px) {
+    .portfolio-center {
+	    display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    
+    .work {
+	    flex: 0 0 calc(50% - 15px);
+    }
+}
+
+@media screen and (min-width: 776px) {
+    .work {
+	    flex: 0 0 calc(33.3% - 15px);
+    }
+}
+*/
+
+
+@media screen and (min-width: 576px) {
+    .portfolio-center {
+	    display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-column-gap: 1em;
+    }
+}
+
+@media screen and (min-width: 776px) {
+    .portfolio-center {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+
+
+
+
+
+
 
 
 
