--- a/css/main.css
+++ b/css/main.css
@@ -665,6 +665,123 @@ nav ul li a:hover {
 }
 
 
+#team {
+	padding: 40px;
+    background: #959595;
+}
+
+.team-member {
+	background: #f5f5f5;
+    margin: 20px 0;
+}
+
+.team-member img {
+	display: block;
+    width: 100%;
+    max-height: 300px;
+}
+
+.image-footer {
+	padding: 20px;
+    display: flex;
+    justify-content: space-between
+}
+
+.footer-info h3 {
+	color: #2b98f0;
+}
+.footer-info h5 {
+	color: #959595;
+    margin: 10px 0;
+    text-transform: uppercase;
+}
+
+.team-icon {
+	color: #959595;
+    margin: 0 5px;
+}
+
+.footer-icon  {
+	font-size: 40px;
+    color: #2b98f0;
+    opacity: 0;
+    align-self: center;
+    transition: transform 2s ease, opacity 2s ease;
+}
+
+.footer-icon:hover {
+	transform: rotate(-90deg);
+}
+
+.team-member:hover .footer-icon {
+	opacity: 1;
+}
+
+/*
+********************** responsive
+*/
+
+/*
+@media screen and (min-width: 576px) {
+    #team-center {
+	    min-width: 90vw;
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+    
+    .team-member {
+	    flex: 0 0 calc(50% - 10px);
+    }
+}
+
+@media screen and (min-width: 776px) {
+    .team-member {
+	    flex: 0 0 calc(25% - 10px);
+    }
+    
+    .footer-icon  {
+        font-size: 20px;
+    }
+}
+*/
+
+@media screen and (min-width: 576px) {
+    #team-center {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-column-gap: 1em;
+    }
+}
+
+@media screen and (min-width: 776px) {
+    #team-center {
+	    grid-template-columns: repeat(4, 1fr);
+    }
+    .footer-icon  {
+        font-size: 20px;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
